<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_back">Quay lại</string>
    <string name="desc_favorite">Yêu thích</string>
    <string name="desc_share">Chia sẻ</string>
    <string name="desc_review_list">Danh sách bài đánh giá</string>
    <string name="review_title">Đánh giá quán</string>
    <string name="go">Đi thôi</string>
    <string name="share">Chia sẻ</string>
    <string name="save">Lưu</string>
    <string name="rate">Đánh giá</string>
    <string name="desc_bookmark">Lưu quán</string>

    <!-- ✅ Thêm dòng này để fix lỗi -->
    <string name="add_image">Thêm ảnh</string>
    <string name="desc_user_avatar">Ảnh đại diện</string>
    <string name="desc_like">Nút thích</string>
    <string name="desc_comment">Nút bình luận</string>
    <string name="zero_count">0</string>
    <string name="placeholder_user_name">Tên người dùng</string>
    <string name="placeholder_time">7 tháng trước</string>
    <string name="placeholder_review_content">Nội dung đánh giá</string>
    <string name="desc_review_images">Danh sách ảnh trong bài đánh giá</string>
    <string name="image">Ảnh</string>
</resources>